# holdout-agent

./: .gitignore  README.md  agent_runner.py  config.py  delete_index.py  es_index.py  evaluation_distributional_parity_topic_difficulty.py  held_in.jsonl  held_out.jsonl  holdout_agent.py  ingest.py  inject_benchmarks.py  main.py  meta_infer.py  pipeline_lora.py  pyproject.toml  run_evaluations.py  run_example.py  split_engine.py  test_split.py
eval_simple_out/: table_difficulty.csv  table_difficulty.md  table_parity.csv  table_parity.md  table_topic.csv  table_topic.md
