[project]
name = "holdout-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "elasticsearch==8.18.1",
    "openai>=1.100.2",
    "openai-agents>=0.2.8",
    "orjson>=3.11.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
]
