[project]
name = "holdout-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "elasticsearch==8.18.1",
    "openai>=1.100.2",
    "openai-agents>=0.2.8",
    "orjson>=3.11.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pot>=0.9.5",
    "tabulate>=0.9.0",
]
